ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode12/input.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode12/input.ts:3:19
  |
3 | var v = { set foo(eval) { } }
  |                   ^^^^

